[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upsurge"
version = "0.1.0"
description = "A Python package for creating multi-format reports with sections, text, images, plots, tables, and multiple pages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kevin Wierman", email = "kwierman@gmail.com"}
]
keywords = ["report", "pdf", "html", "markdown", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "markdown-it-py>=3.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "myst-parser>=2.0.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.scripts]
upsurge = "upsurge:main"

[project.urls]
Homepage = "https://github.com/kwierman/upsurge"
Repository = "https://github.com/kwierman/upsurge"
Issues = "https://github.com/kwierman/upsurge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
upsurge = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/upsurge --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
